# SkillBridge

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  db.sqlite3  detalle_oferta.html  docker-compose.yml  download_model.py  output.html  package-lock.json  package.json  requirement.txt  requirements.txt
backend/: .env.example  .gitignore  ANALISIS_Y_REFACTORIZACION.md  CHANGELOG.md  EJECUCION_FASE3.md  GEMINI_CV_SETUP.md  PASSWORD_RESET_SETUP.md  README.md  conftest.py  pyproject.toml  pytest.ini  requirements-prod.txt  requirements-test.txt  requirements.txt
backend/analytics/: admin.py  bots.py  models.py  serializers.py  urls.py  views.py
backend/analytics/migrations/: 0001_initial.py
backend/analytics/tests/: test_analytics.py
backend/applications/: cover_letter_generator.py  models.py  serializers.py  urls.py  views.py
backend/applications/migrations/: 0001_initial.py  0002_alter_jobapplication_options_jobapplication_notes_and_more.py  0003_coverletter.py
backend/applications/tests/: test_applications.py  test_cover_letters.py
backend/common/: skills_taxonomy.py
backend/common/tests/: test_skills_taxonomy.py
backend/core/: __init__.py  celery.py  settings.py  test_settings.py  urls.py
backend/dashboard/: urls.py  views.py
backend/dashboard/tests/: test_dashboard.py
backend/faq/: admin.py  models.py  serializers.py  urls.py  views.py
backend/faq/migrations/: 0001_initial.py  0002_seed_categories_and_faqs.py
backend/faq/services/: faq_responder.py
backend/faq/tests/: test_faq.py
backend/jobs/: apps.py  keywords.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/jobs/migrations/: 0002_alter_joboffer_title_url.py  0011_fix_torre_urls.py  (+14 more)
backend/notifications/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/system_settings/: models.py  serializers.py  urls.py  views.py
backend/tips/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/users/: admin.py  auth_urls.py  companies_urls.py  models.py  oauth_linkedin.py  serializers.py  tasks.py  urls.py  views.py
(+433 files in other folders)
